--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 		<p>Please <a href="/login">log in</a> or <a href="/signup">sign up</a>.</p>
 	<% } else { %>
 		<h3>Hi, <%= user.name %>.</h3>
+		<a href="/logout">Click here to log out.</a>
 	<% } %>
 </body>
 </html>
