--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,12 +2,30 @@
 <html>
 <head>
 	<title>Sign up | Quick-Poll</title>
+	<!-- Import Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<!-- Import custom CSS -->
+	<link rel="stylesheet" type="text/css" href="custom.css">
 </head>
 <body>
-	<form action="" method="post">
-		<input type="text" name="username" placeholder"Username" />
-		<input type="password" name="password" placeholder="Password" />
-		<input type="submit" value="Sign Up" />
-	</form>
+	<div id="heading-banner">
+		<h1><b>Quick-Poll<b></h1>
+		<p>The simplest way to gather opinions.</p>
+	</div>
+	<div class="container-fluid">
+		<div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6" id="signup-form">
+			<h3>Please enter your details below</h3>
+			<form action="" method="post">
+				Username: 
+				<input type="text" name="username" />
+				<br><br>
+				Password: 
+				<input type="password" name="password" />
+				<br><br>
+				<input type="submit" value="Sign Up" />
+			</form>
+		</div>		
+	</div>
+	
 </body>
 </html>
