Slightly beautified log in page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="heading-banner">
-		<h1><b>Quick-Poll<b></h1>
+		<h1><a href="/"><b>Quick-Poll<b></a></h1>
 		<p>The simplest way to gather opinions.</p>
 	</div>
 
