--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,23 +9,19 @@
 </head>
 <body>
 	<div id="heading-banner">
-		<h1><b>Quick-Poll<b></h1>
+		<h1><a href="/"><b>Quick-Poll<b></a></h1>
 		<p>The simplest way to gather opinions.</p>
 	</div>
-	<div class="container-fluid">
-		<div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6" id="signup-form">
-			<h3>Please enter your details below</h3>
-			<form action="" method="post">
-				Username: 
-				<input type="text" name="username" />
-				<br><br>
-				Password: 
-				<input type="password" name="password" />
-				<br><br>
-				<input type="submit" value="Sign Up" />
-			</form>
-		</div>		
-	</div>
+	<h3>Please enter your details below</h3>
+	<form action="" method="post">
+		Username: 
+		<input type="text" name="username" />
+		<br><br>
+		Password: 
+		<input type="password" name="password" />
+		<br><br>
+		<input type="submit" value="Sign Up" />
+	</form>
 	
 </body>
 </html>
