--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,18 @@
 	<% } else { %>
 		<h3>Hi, <%= user.name %>.</h3>
 		<a href="/logout">Click here to log out.</a>
+		<br><br>
+		<div class="container-fluid">
+			<a href="/my-polls"><div class="option col-sm-offset-4 col-sm-4 col-md-offset-5 col-md-2">
+				My Polls
+			</div></a>
+			<a href="/create-poll"><div class="option col-sm-offset-4 col-sm-4 col-md-offset-5 col-md-2">
+				Create New Poll
+			</div></a>
+			<a href="/vote"><div class="option col-sm-offset-4 col-sm-4 col-md-offset-5 col-md-2">
+				Share Your Opinion
+			</div></a>
+		</div>
 	<% } %>
 </body>
 </html>
