--- a/views/create-poll.ejs
+++ b/views/create-poll.ejs
@@ -13,6 +13,16 @@
 		<p>The simplest way to gather opinions.</p>
 	</div>
 	<h3>Create New Poll</h3>
-	
+	<div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+		<form action="" method="post">
+			<input type="text" name="question" placeholder="Question..." />
+			<ul>
+				<% for(var i=0; i<options.length; i++) { %>
+					<li><%= options[i] %></li>
+				<% } %>
+			</ul>
+			<button id="add_option">Add option</button>
+		</form>
+	</div>
 </body>
 </html>
