--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,5 +32,6 @@
 			</div></a>
 		</div>
 	<% } %>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 </body>
 </html>
