--- a/views/create-poll.ejs
+++ b/views/create-poll.ejs
@@ -22,6 +22,7 @@
 				</li>
 			</ul>
 			<button type="button" ng-click="ctrl.addOption()">Add option</button>
+			<button type="button" ng-click="ctrl.savePoll()">Submit poll</button>
 		</form>
 	</div>
 
