Can sign in and out

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,7 +2,8 @@
 	<p>Hi there, {{ active_user }}.</p>
 	<a href="/my-polls">My Polls</a><br>
 	<a href="/create-poll">Create Poll</a><br>
-	<a href="/vote">Vote</a><br>
+	<a href="/vote">Vote</a><br><br>
+	<a href="/logout">Log out</a>
 </div>
 
 <div ng-if="authenticated == false">
