--- a/public/views/index.html
+++ b/public/views/index.html
@@ -22,9 +22,10 @@
 </head>
 <body ng-app="pollApp" ng-controller="MainCtrl">
 	<div id="banner">
-		<h1>Quick-Poll</h1>
+		<a href="/"><h1>Quick-Poll</h1></a>
 		<p>The simple way to gather opinions.</p>
 	</div>
+	
 	<!-- Dynamic Angular template -->
 	<div ng-view></div>
 </body>
