--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,10 @@ body {
 	background-color: blue;
 	color: white;
 }
+#banner a {
+	text-decoration: none;
+	color: white;
+}
 
 #problem{
 	color: red;
