--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,16 @@ body {
 #problem{
 	color: red;
 }
+
+#create-poll-question {
+	margin-bottom: 15px;
+	font-size: 20px;
+}
+#create-poll-form ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+#create-poll-form button {
+	margin: 15px 5px 5px 15px;
+}
