--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,6 +11,8 @@
 	<script type="text/javascript" src="/js/controllers/mainController.js"></script>
 	<script type="text/javascript" src="/js/controllers/signupController.js"></script>
 	<script type="text/javascript" src="/js/controllers/loginController.js"></script>
+	<script type="text/javascript" src="/js/controllers/createPollController.js"></script>
+	<script type="text/javascript" src="/js/controllers/myPollsController.js"></script>
 	<script type="text/javascript" src="/js/appRoutes.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
 
