--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="/js/controllers/loginController.js"></script>
 	<script type="text/javascript" src="/js/controllers/createPollController.js"></script>
 	<script type="text/javascript" src="/js/controllers/myPollsController.js"></script>
+	<script type="text/javascript" src="/js/controllers/myPollController.js"></script>
 	<script type="text/javascript" src="/js/controllers/voteController.js"></script>
 	<script type="text/javascript" src="/js/appRoutes.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
