--- a/public/views/myPolls.html
+++ b/public/views/myPolls.html
@@ -1,10 +1,14 @@
+<div ng-show="problem" id="problem">
+	<p>Error: {{ problem }}</p>
+</div>
+
 <div id="my-polls" class="container-fluid">
 	<h3>Click on a poll question to view more details.</h3>
 	<ul class="col-sm-6 col-sm-offset-3">
 		<li ng-repeat="poll in polls">
-			<span id="my-polls-question" ng-click="viewPoll($index)">
+			<a id="my-polls-question" href="/my-poll?id={{poll._id}}">
 				{{ poll.question }}
-			</span>
+			</a>
 			<br>
 			<span id="my-polls-created">created: {{ poll.created }}</span> | <span id="my-polls-delete" ng-click="delete($index)">delete</span>
 		</li>
