About to start implementing D3 to display votes

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,6 +7,8 @@
 	<!-- Import AngularJS and ngRoute -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
+	<!-- Import D3.js -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.11/d3.min.js"></script>
 	<!-- Import custom JS -->
 	<script type="text/javascript" src="/js/controllers/mainController.js"></script>
 	<script type="text/javascript" src="/js/controllers/signupController.js"></script>
