--- a/public/views/myPoll.html
+++ b/public/views/myPoll.html
@@ -5,4 +5,6 @@
 <div id="my-poll" class="container-fluid">
 	<h3>{{ poll.question }}</h3>
 	Total votes cast: {{ poll.total_votes }}
+
+	<div id="graph"></div>
 </div>
