My Poll draws a simple, working bar chart

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,3 +41,12 @@ body {
 	color: red;
 	cursor: pointer;
 }
+
+#graph div{
+	font: 10px sans-serif;
+	background-color: steelblue;
+	text-align: right;
+	padding: 3px;
+	margin: 1px;
+	color: white;
+}
