--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,6 +9,12 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 	<!-- Import D3.js -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.11/d3.min.js"></script>
+	<!-- Import heading font -->
+	<link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+	<!-- Import body font -->
+	<link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>
+	<!-- Import font-awesome -->
+	<link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
 	<!-- Import custom JS -->
 	<script type="text/javascript" src="/js/controllers/mainController.js"></script>
 	<script type="text/javascript" src="/js/controllers/signupController.js"></script>
