--- a/public/views/login.html
+++ b/public/views/login.html
@@ -11,5 +11,5 @@
 	Password: 
 	<input type="password" ng-model="password" />
 	<br><br>
-	<button ng-click="login()">Log In</button>
+	<button class="btn btn-default" ng-click="login()">Log In</button>
 </div>
