--- a/public/views/vote.html
+++ b/public/views/vote.html
@@ -6,8 +6,8 @@
 	<div class="col-sm-6 col-sm-offset-3">
 		<h3>Share your opinion</h3>
 		<p>Enter the Poll ID of the poll to which you wish to contribute below:</p>
-		<input type="text" ng-model="poll_id" /><br>
-		<button ng-click="goVote()">Go!</button>
+		<input type="text" ng-model="poll_id" /><br><br>
+		<button class="btn btn-default" ng-click="goVote()">Go!</button>
 	</div>
 </div>
 
@@ -24,7 +24,7 @@
 				</div>
 				<br>
 			</div>
-			<button ng-click="submitVote()">Vote</button>
+			<button class="btn btn-default" ng-click="submitVote()">Vote</button>
 		</form>
 		
 	</div>
