Commit before new branch

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -91,9 +91,9 @@ input {
 
 #graph div{
 	font: 10px sans-serif;
-	background-color: steelblue;
+	background-color: #F72C25;
 	text-align: right;
 	padding: 3px;
 	margin: 1px;
-	color: white;
+	color: #A9E5BB;
 }
