--- a/public/views/myPoll.html
+++ b/public/views/myPoll.html
@@ -4,7 +4,6 @@
 
 <div id="my-poll" class="container-fluid">
 	<h3>{{ poll.question }}</h3>
-	Total votes cast: {{ poll.total_votes }}
-
-	<div id="graph"></div>
+	Total votes cast: {{ poll.total_votes }}<br>
+	<div class="col-md-6 col-md-offset-3" id="graph"></div>
 </div>
