--- a/public/views/myPolls.html
+++ b/public/views/myPolls.html
@@ -2,15 +2,13 @@
 	<p>Error: {{ problem }}</p>
 </div>
 
-<div id="my-polls" class="container-fluid">
-	<h3>Click on a poll question to view more details.</h3>
-	<ul class="col-sm-6 col-sm-offset-3">
-		<li ng-repeat="poll in polls">
-			<a id="my-polls-question" href="/my-poll?id={{poll._id}}">
-				{{ poll.question }}
-			</a>
-			<br>
-			<span id="my-polls-created">created: {{ poll.created }}</span> | <span id="my-polls-delete" ng-click="delete($index)">delete</span>
-		</li>
-	</ul>
+<h3 ng-hide="sharing">Click on a poll question to view more details.</h3>
+<div class="container-fluid poll-item" ng-repeat="poll in polls" ng-hide="sharing">
+	<a href="/my-poll?id={{poll._id}}">{{ poll.question }}</a><br>
+	<span class="creation-date">created: {{ poll.created }}</span> | <span class="share-poll" ng-click="share($index)">share</span> | <span class="delete-poll" ng-click="delete($index)">delete</span>
+</div>
+
+<div ng-show="sharing" id="sharing" class="col-sm-6 col-sm-offset-3">
+	<br><p>Share this link with people who you want to vote on your poll:</p>
+	<div class="well">{{ share_link }}</div>
 </div>
