--- a/public/views/myPoll.html
+++ b/public/views/myPoll.html
@@ -1,7 +1,9 @@
 <div ng-show="problem" id="problem">
 	<p>Error: {{ problem }}</p>
 </div>
-
+<div class="back">
+	<a href="/my-polls"><i class="fa fa-chevron-left"></i> Go back</a>
+</div>
 <div id="my-poll" class="container-fluid">
 	<h3>{{ poll.question }}</h3>
 	Total votes cast: {{ poll.total_votes }}<br>
