Added link to signup from login page

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -12,4 +12,6 @@
 	<input type="password" ng-model="password" />
 	<br><br>
 	<button class="btn btn-default" ng-click="login()">Log In</button>
+	<br><br>
+	<a href="/signup"><em>New here? Sign up - it only takes a second!</em></a>
 </div>
