Fixed button class

--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -11,7 +11,7 @@
 	Password: 
 	<input type="password" ng-model="password" />
 	<br><br>
-	<button ng-click="signup()">Sign Up</button>
+	<button class="btn btn-default" ng-click="signup()">Sign Up</button>
 </div>
 
 <div id="signup-complete" ng-show="user_added">
