Fixed logout button

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,5 @@
 <div id="home-authenticated" ng-if="authenticated == true">
-	<p>Hi there, {{ active_user }}.</p>
+	<br><p>Hi there, <strong>{{ active_user }}</strong>.</p><br>
 	<div class="container-fluid">
 		<a href="/my-polls"><div class="col-sm-2 col-sm-offset-2 home-tile">
 			<i class="fa fa-bar-chart fa-3x"></i><br>
@@ -14,7 +14,7 @@
 			Vote	
 		</div></a>
 	</div>
-	<a href="/logout">Log out</a>
+	<br><button class="btn btn-default" ng-click="logout()">Log out</button>
 </div>
 
 <div ng-if="authenticated == false">
