--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,10 +5,10 @@
 	<title>Quick Poll</title>
 
 	<!-- Import AngularJS and ngRoute -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
+	<script src="/resources/angular.min.js"></script>
+	<script src="/resources/angular-route.min.js"></script>
 	<!-- Import D3.js -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.11/d3.min.js"></script>
+	<script src="/resources/d3.min.js"></script>
 	<!-- Import heading font -->
 	<link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 	<!-- Import body font -->
@@ -27,7 +27,7 @@
 	<script type="text/javascript" src="/js/app.js"></script>
 
 	<!-- Import Bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/resources/bootstrap.min.css">
 	<!-- Import custom CSS -->
 	<link rel="stylesheet" type="text/css" href="/css/styles.css">	
 
