Only show back in My Polls page when viewing share link

--- a/public/views/myPolls.html
+++ b/public/views/myPolls.html
@@ -2,7 +2,7 @@
 	<p>Error: {{ problem }}</p>
 </div>
 
-<div class="back">
+<div class="back" ng-show="sharing">
 	<a href="" ng-click="sharing=false"><i class="fa fa-chevron-left"></i> Go back</a>
 </div>
 
