--- a/public/views/myPoll.html
+++ b/public/views/myPoll.html
@@ -4,8 +4,8 @@
 <div class="back" ng-show="owner">
 	<a href="/my-polls"><i class="fa fa-chevron-left"></i> Back to my polls</a>
 </div>
-<div class="back" ng-show="authenticated && !owner">
-	<a href="/my-polls"><i class="fa fa-chevron-left"></i> Home</a>
+<div class="back" ng-hide="owner">
+	<a href="/"><i class="fa fa-chevron-left"></i> Home</a>
 </div>
 <div id="my-poll" class="container-fluid">
 	<h3>{{ poll.question }}</h3>
