--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,12 +45,16 @@ input {
 	padding: 5px;
 	background-color: #F72C25;
 	color: #A9E5BB;
+	width: 100%;
+	margin-bottom: 15px;
 }
 #banner h1 {
 	font-size:	5em;
+	margin-top: 0;
 }
 #banner p {
 	font-size: 2em;
+	margin-bottom: 0;
 }
 #banner a {
 	text-decoration: none;
@@ -58,6 +62,16 @@ input {
 }
 #banner a:hover {
 	font-style: normal;
+}
+#active-user {
+	font-family: 'Cambay', sans-serif;
+	text-align: right;
+	font-size: 1.3em !important;
+	margin: 0;
+}
+#active-user a {
+	text-decoration: underline;
+	font-weight: normal;
 }
 
 #problem{
